--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -83,7 +83,7 @@ html(lang="en")
       section(class="Debit")
         #carouselExampleInterval.carousel.slide(data-ride='carousel')
           .carousel-inner
-            .carousel-item.active(data-interval='1000')
+            .carousel-titem.active(data-interval='1000')
               .slide-content
                 .img-wrap
                   img.d-block(src='images/Rectangle 1.png' class="img-fluid" ,width='100%', height='100%', alt='фото')
@@ -281,12 +281,12 @@ html(lang="en")
                 li(data-target='#carouselExampleCaptions' data-slide-to='1')
                 li(data-target='#carouselExampleCaptions' data-slide-to='2')
               .carousel-inner
-                .carousel-item.active
+                .carousel-titem.active
                   div(class="Blot")
                     div(class="bloc bloc1")
                       .container
                         .row(class="der")
-                          .col-md-12.col-sm-12
+                          .col-md-12.col-sm-12(class="ders")
                             img(src="images/fot.png", alt="картинка")
                             div(class="Dwrap")
                               p(class="derwwr") директор
@@ -296,7 +296,7 @@ html(lang="en")
                     div(class="bloc bloc2")
                       .container
                         .row(class="der")
-                          .col-12
+                          .col-12(class="ders")
                             img(src="images/fot.png", alt="картинка")
                             div(class="Dwrap")
                               p(class="derwwr") глава представительства
@@ -409,24 +409,24 @@ html(lang="en")
           .container    
             div(class="DWQ")
               .row(class="DDS")
-                .col-md-5.col-sm-12    
+                .col-md-5.col-sm-12(class="disi")    
                   div(class="SErvscrol")
                     div(class="corol")
                     p(class="regi") Регистрации ИП и юрлиц
                     a(class="regin" href="#") ПОДРОБНЕЕ
-                .col-md-7.col-sm-12 
+                .col-md-7.col-sm-12(class="serw") 
                   div(class="SErvscroll")
                     div(class="coroll")
                     p(class="regi") Ликвидация, реорганизация и продажа бизнеса
                     a(class="reginn" href="#") ПОДРОБНЕЕ
             div(class="DWD")
               .row(class="DDS")
-                .col-md-6.col-sm-12     
+                .col-md-6.col-sm-12(class="disi")     
                   div(class="SErvscr")
                     div(class="corol2")
                     p(class="regi") Взыскание дебиторской задолженности
                     a(class="reginy" href="#") ПОДРОБНЕЕ
-                .col-md-6.col-sm-12 
+                .col-md-6.col-sm-12(class="disi")  
                   div(class="SErvscr")
                     div(class="coroll2")   
                     p(class="regi") Письменные и устные консультации
@@ -434,12 +434,12 @@ html(lang="en")
 
             div(class="DWW")
               .row(class="DDS")
-                .col-md-7.col-sm-12     
+                .col-md-7.col-sm-12(class="disi")      
                   div(class="SErvscrt")
                     div(class="corol21")
                     p(class="regii") Разработка уставных документов и внесение <br> изменений в них
                     a(class="regin15" href="#") ПОДРОБНЕЕ
-                .col-md-5.col-sm-12 
+                .col-md-5.col-sm-12(class="disi")  
                   div(class="SErvscry")
                     div(class="coroll21")   
                     p(class="regi") Ведение переговоров
@@ -447,12 +447,12 @@ html(lang="en")
 
             div(class="DWC")
               .row(class="DDS")
-                .col-md-6.col-sm-12     
+                .col-md-6.col-sm-12(class="disi")      
                   div(class="SErvscr")
                     div(class="corol2")
                     p(class="regi") Комплексное сопровождение бизнеса
                     a(class="reginy" href="#") ПОДРОБНЕЕ
-                .col-md-6.col-sm-12 
+                .col-md-6.col-sm-12(class="disi")  
                   div(class="SErvscr")
                     div(class="coroll2")   
                     p(class="regi") Сопровождение деловых сделок
@@ -460,12 +460,12 @@ html(lang="en")
 
             div(class="DWt")
               .row(class="DDS")
-                .col-md-5.col-sm-12     
+                .col-md-5.col-sm-12(class="disi")      
                   div(class="SErvscrol")
                     div(class="corol")
                     p(class="regi") Лицензирование бизнеса
                     a(class="regin362" href="#") ПОДРОБНЕЕ
-                .col-md-7.col-sm-12 
+                .col-md-7.col-sm-12(class="disi")  
                   div(class="SErvscroll")
                     div(class="coroll") 
                     p(class="regi") Решение правовых споров
