--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -944,7 +944,7 @@ button
   color: rgba(0, 0, 0, 0.75)
 
 hr 
-  width: 1170px
+  width: 100%
   margin-top: 59px !important
   margin-bottom: 60px !important
 
@@ -1947,12 +1947,28 @@ label
   .prakt
     p
       width: 550px
-
+  
+  .serw
+    display: flex !important
+    align-items: center !important
+    justify-content: center !important
   .SErvscrol
     margin-left: 0
+    width: 100%
 
   .SErvscry
     margin-left: 0
+    width: 100%
+
+  .regin
+    padding-left: 100px  
+
+  .regi
+    padding-bottom: 0
+    padding-top: 5px
+    font-size: 18px
+    line-height: 20px
+    padding-left: 75px  
 
   .texno2
     width: 515px  
@@ -1962,6 +1978,23 @@ label
     p
       width: 100px
 
+@media (max-width: 770px) 
+  .busS 
+    width: 100%
+  .busS-tex
+    width: 100%
+    text-align: center
+
+  .disi
+    display: flex !important
+    justify-content: center !important
+    align-items: center !important
+    width: 80% !important
+
+  .serw
+    width: 80% !important 
+
+  
 @media (max-width: 760px) 
   .texno3 
     width: 115px
@@ -2002,6 +2035,7 @@ label
     button
       width: 115px
       height: 26px  
+      line-height: 25px !important
 
 @media (max-width: 695px)   
   .texno3 
@@ -2048,8 +2082,52 @@ label
   .prakt 
     p
       width: 450px  
-   
-    
+
+@media (max-width: 600px) 
+  .Blot     
+    width: 100%
+
+  .bloc 
+    width: 400px
+    height: 670px 
+
+  .ders 
+    img
+      width: 100% 
+
+  .BRT
+    top: 1140px !important
+
+  .BRTL
+    top: 1140px  !important
+
+  .regin362
+    padding-left: 150px  
+    padding-top: 10px
+
+  .reginn
+    padding-left: 150px
+    padding-top: 20px  
+
+  .regin15 
+    padding-left: 150px
+
+@media (max-width: 550px) 
+  .Yr12 p
+    line-height: 20px
+    font-size: 15px
+
+@media (max-width: 530px)  
+  .busS-tex
+    width: 100%
+    margin-left: 0
+  .busS
+    width: 100%
+  .detail
+    width: 280px
+  .det-wrap
+    padding-bottom: 0
+
 @media (max-width: 520px) 
   .Yr-wrap p
     width: 350px
@@ -2060,11 +2138,14 @@ label
       width: 300px    
       padding-bottom: 180px
 
+  .Blot     
+    width: 100%
+    
 @media (max-width: 490px)      
   .busS-tex
     width: 350px
     text-align: center
-    margin-left: 35px
+    margin-left: 0
 
   .DEta
     margin-bottom: 10px  
@@ -2075,6 +2156,33 @@ label
     flex-direction: column
     align-items: center
 
+  .regii
+    line-height: 20px
+
+  .brok 
+    width: 285px
+    margin-bottom: 19px
+
+  .brokkrug 
+    margin-right: 10px   
+
+  .Daaavs 
+    width: 350px   
+
+@media (max-width: 430px) 
+  .bloc 
+    width: 350px
+    height: 750px 
+
+  .BRT
+    top: 1310px !important
+
+  .BRTL
+    top: 1310px  !important  
+
+  .regii
+    padding-top: 5px
+    font-size: 18px
 
 @media (max-width: 400px) 
   .namber span
@@ -2098,3 +2206,24 @@ label
       height: 60px 
     .card-wrap
       padding-top: 100px  
+  .busS-im
+    width: 100%    
+
+@media (max-width: 380px)     
+  .ovwrap 
+    h1
+      line-height: 13px
+      padding-bottom: 0px
+
+@media (max-width: 360px) 
+  .Fon 
+    .otz 
+      font-size: 23px
+      padding-top: 150px    
+
+  .Daaavs 
+    width: 250px
+
+  .Daaav
+    font-size: 26px
+      
