--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1198,7 +1198,7 @@ label
   margin-bottom: 100px
 
 .stik
-  width: 1920px
+  width: 100%
   margin-top: 0 !important
   margin-bottom: 49px  !important
 
@@ -1891,6 +1891,9 @@ label
     margin-top: 10px
     margin-bottom: 15px
 
+  .sti
+    margin-bottom: 20px
+
   .texno
     margin-left: 25px
 
@@ -1903,6 +1906,9 @@ label
   .str
     margin-left: -76px
     margin-top: -6px  
+
+  .DEta
+    margin-bottom: 5px  
 
 @media (max-width: 950px) 
   .SErvscroll
@@ -2060,6 +2066,7 @@ label
   .all 
     flex-direction: column 
     align-items: center
+    margin-left: 0px 
 
   .ybr
     display: block
@@ -2117,6 +2124,35 @@ label
     line-height: 20px
     font-size: 15px
 
+  .za  
+    top: 2em !important
+    left: 11em !important
+  .pos
+    top: 2em !important 
+    left: 12.5em !important   
+
+  .cooperate
+    width: 400px
+    h2
+      text-align: center
+      padding-bottom: 8px
+  .coop-wrap 
+    p
+      font-size: 15px
+      line-height: 20px
+      width: 285px      
+  .Yrist
+    margin-bottom: 10px
+
+  .dok 
+    p 
+      padding-top: 0
+      font-size: 14px
+      line-height: 18px
+  .formik
+    margin-top: 40px
+
+
 @media (max-width: 530px)  
   .busS-tex
     width: 100%
@@ -2140,15 +2176,29 @@ label
 
   .Blot     
     width: 100%
+
+  form
+    margin: 0 auto  
     
 @media (max-width: 490px)      
   .busS-tex
-    width: 350px
+    width: 100%
     text-align: center
     margin-left: 0
 
   .DEta
     margin-bottom: 10px  
+
+  .ovwrap 
+    h1
+      line-height: 13px
+      font-size: 13px
+      margin-bottom: 0
+      padding-bottom: 3px  
+
+@media (max-width: 480px)    
+  .busS-tex
+    
 
 @media (max-width: 470px)
   .GRinter
@@ -2187,12 +2237,6 @@ label
 @media (max-width: 400px) 
   .namber span
     font-size: 11px
-  .za  
-    top: -6em !important
-    left: 12em !important
-  .pos
-    top: -6em !important 
-    left: 13.5em !important 
   .ovwrap 
     p
       width: 200px  
@@ -2212,8 +2256,25 @@ label
 @media (max-width: 380px)     
   .ovwrap 
     h1
-      line-height: 13px
+      line-height: 10px
+      font-size: 8px
+      margin-bottom: 0
       padding-bottom: 0px
+
+  .za  
+    top: 2em !important
+    left: 9em !important
+  .pos
+    top: 2em !important 
+    left: 10.5em !important     
+
+
+  .namber 
+    span
+      padding-right: 5px
+    img
+      padding-right: 5px  
+
 
 @media (max-width: 360px) 
   .Fon 
@@ -2227,3 +2288,10 @@ label
   .Daaav
     font-size: 26px
       
+@media (max-width: 350px) 
+  .za  
+    top: 4.5em !important
+    left: 5em !important
+  .pos
+    top: 4.5em !important 
+    left: 6.5em !important    
