--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -83,7 +83,7 @@ html(lang="en")
       section(class="Debit")
         #carouselExampleInterval.carousel.slide(data-ride='carousel')
           .carousel-inner
-            .carousel-titem.active(data-interval='1000')
+            .carousel-item.active(data-interval='1000')
               .slide-content
                 .img-wrap
                   img.d-block(src='images/Rectangle 1.png' class="img-fluid" ,width='100%', height='100%', alt='фото')
@@ -281,7 +281,7 @@ html(lang="en")
                 li(data-target='#carouselExampleCaptions' data-slide-to='1')
                 li(data-target='#carouselExampleCaptions' data-slide-to='2')
               .carousel-inner
-                .carousel-titem.active
+                .carousel-item.active
                   div(class="Blot")
                     div(class="bloc bloc1")
                       .container
@@ -311,7 +311,7 @@ html(lang="en")
                     div(class="bloc bloc1")
                       .container
                         .row(class="der")
-                          .col-12
+                          .col-12(class="ders")
                             img(src="images/fot.png", alt="картинка")
                             div(class="Dwrap")
                               p(class="derwwr") директор
@@ -321,7 +321,7 @@ html(lang="en")
                     div(class="bloc bloc2")
                       .container
                         .row(class="der")
-                          .col-12
+                          .col-12(class="ders")
                             img(src="images/fot.png", alt="картинка")
                             div(class="Dwrap")
                               p(class="derwwr") глава представительства
@@ -336,7 +336,7 @@ html(lang="en")
                     div(class="bloc bloc1")
                       .container
                         .row(class="der")
-                          .col-12
+                          .col-12(class="ders")
                             img(src="images/fot.png", alt="картинка")
                             div(class="Dwrap")
                               p(class="derwwr") директор
@@ -346,7 +346,7 @@ html(lang="en")
                     div(class="bloc bloc2")
                       .container
                         .row(class="der")
-                          .col-12
+                          .col-12(class="ders")
                             img(src="images/fot.png", alt="картинка")
                             div(class="Dwrap")
                               p(class="derwwr") глава представительства
