--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1198,7 +1198,7 @@ label
   margin-bottom: 100px
 
 .stik
-  width: 100%
+  width: 100% 
   margin-top: 0 !important
   margin-bottom: 49px  !important
 
@@ -1805,6 +1805,7 @@ label
   .col-md-5
     justify-content: center
     display: flex
+    padding-right: 0px !important
 
   .col-md-2
     justify-content: center
@@ -1911,6 +1912,8 @@ label
     margin-bottom: 5px  
 
 @media (max-width: 950px) 
+  .disi
+    padding-right: 15px !important
   .SErvscroll
     width: 100%
 
@@ -1996,10 +1999,17 @@ label
     justify-content: center !important
     align-items: center !important
     width: 80% !important
+    
 
   .serw
     width: 80% !important 
 
+  .Daaavs
+    width: 460px
+    text-align: center
+
+  .all4
+    padding-right: 10px  
   
 @media (max-width: 760px) 
   .texno3 
@@ -2076,6 +2086,7 @@ label
 
   .frame
     width: 100%
+    margin: 0 auto
   form
     width: 450px !important
     margin-left: 50px
@@ -2089,6 +2100,12 @@ label
   .prakt 
     p
       width: 450px  
+
+  .ders
+    img  
+      width: 100%  
+
+     
 
 @media (max-width: 600px) 
   .Blot     
@@ -2163,6 +2180,10 @@ label
     width: 280px
   .det-wrap
     padding-bottom: 0
+
+  .wrap--a
+    font-size: 25px
+    margin-bottom: 0px  
 
 @media (max-width: 520px) 
   .Yr-wrap p
