--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2088,11 +2088,11 @@ label
     width: 100%
     margin: 0 auto
   form
-    width: 450px !important
+    width: 100% !important
     margin-left: 50px
 
   .kons
-    width: 360px !important  
+    width: 100% !important  
 
   .Daaavs
     text-align: center  
@@ -2185,6 +2185,15 @@ label
     font-size: 25px
     margin-bottom: 0px  
 
+@media (max-width: 525px)
+  .cooperate
+    width: 400px
+  .coop-wrap
+    p
+      font-size: 15px
+      line-height: 20px
+      width: 330px 
+
 @media (max-width: 520px) 
   .Yr-wrap p
     width: 350px
@@ -2218,8 +2227,14 @@ label
       padding-bottom: 3px  
 
 @media (max-width: 480px)    
-  .busS-tex
-    
+  .Yr-wrap
+     p
+       width: 100%
+       margin-bottom: 198px
+       padding: 2px
+  .Yrist  
+    height: 271px
+    text-align: center
 
 @media (max-width: 470px)
   .GRinter
@@ -2228,7 +2243,7 @@ label
     align-items: center
 
   .regii
-    line-height: 20px
+    line-height: 15px
 
   .brok 
     width: 285px
@@ -2239,6 +2254,27 @@ label
 
   .Daaavs 
     width: 350px   
+
+  .cooperate
+    width: 330px
+
+  .cooperater
+    width: 390px
+    justify-content: center
+    margin-left: 10px
+  .coop
+    margin-right: 5px
+    width: 50px
+    height: 50px
+
+  .coop-wrape
+     p
+       width: 225px
+
+  .cooperatere  
+    width: 390px
+    justify-content: center
+    margin-left: 10px
 
 @media (max-width: 430px) 
   .bloc 
@@ -2254,6 +2290,11 @@ label
   .regii
     padding-top: 5px
     font-size: 18px
+
+  .coop-wrap 
+    p
+      width: 260px
+
 
 @media (max-width: 400px) 
   .namber span
@@ -2273,6 +2314,21 @@ label
       padding-top: 100px  
   .busS-im
     width: 100%    
+
+@media (max-width: 390px) 
+  .prakt 
+    p 
+      font-size: 12px
+      line-height: 21px
+      text-align: center
+      width: 100%
+
+  .re
+    h4
+      font-size: 22px
+      line-height: 30px  
+      text-align: center
+      width: 100%
 
 @media (max-width: 380px)     
   .ovwrap 
@@ -2296,6 +2352,8 @@ label
     img
       padding-right: 5px  
 
+  .coop-wrap
+    width: 100%
 
 @media (max-width: 360px) 
   .Fon 
@@ -2308,6 +2366,9 @@ label
 
   .Daaav
     font-size: 26px
+
+  .formik
+    padding: 30px 40px !important  
       
 @media (max-width: 350px) 
   .za  
@@ -2316,3 +2377,6 @@ label
   .pos
     top: 4.5em !important 
     left: 6.5em !important    
+  .Yr-wrap
+    p
+      margin-bottom: 210px
