--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -1733,6 +1733,14 @@ label
   .navigation
     display: none 
 
+@media (max-width: 1070px)
+  .namber
+    span
+      padding-right: 7px
+    img
+      padding-right: 7px  
+
+
 @media (max-width: 1010px)
   .detu-wrap
     flex-direction: column
@@ -1910,6 +1918,10 @@ label
 
   .DEta
     margin-bottom: 5px  
+
+  .namber
+    span
+      font-size: 10px  
 
 @media (max-width: 950px) 
   .disi
