--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -2384,11 +2384,14 @@ label
       
 @media (max-width: 350px) 
   .za  
-    top: 4.5em !important
+    top: 5.4em !important
     left: 5em !important
   .pos
-    top: 4.5em !important 
-    left: 6.5em !important    
+    top: 5.4em !important 
+    left: 6.5em !important 
+  .ovwrap
+     p   
+       padding-bottom: 2px  
   .Yr-wrap
     p
       margin-bottom: 210px
